--- a/docs/gitinspector.1
+++ b/docs/gitinspector.1
@@ -300,11 +300,11 @@ Originally written by Adam Waldenberg\&.
 .sp
 Report gitinspector bugs to gitinspector@ejwa\&.se
 .sp
-The gitinspector project page: https://github\&.com/ejwa/gitinspector
+The gitinspector project page: https://github\&.com/cyberlytics/gitinspector
 .sp
 If you encounter problems, be sure to read the FAQ first: https://github\&.com/ejwa/gitinspector/wiki/FAQ
 .sp
-There is also an issue tracker at: https://github\&.com/ejwa/gitinspector/issues
+There is also an issue tracker at: https://github\&.com/cyberlytics/gitinspector/issues
 .SH "COPYRIGHT"
 .sp
 Copyright \(co 2012\-2015 Ejwa Software\&. All rights reserved\&. License GPLv3+: GNU GPL version 3 or later http://gnu\&.org/licenses/gpl\&.html\&. This is free software: you are free to change and redistribute it\&. There is NO WARRANTY, to the extent permitted by law\&.
